[OCR][Projet 6] - add create account with balance 0 by default, add tests for userDatails, manage logout to display logout message]

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,6 +29,9 @@
                     <div th:if="${param.logout}" class="alert alert-success">
                         You have been logged out.
                     </div>
+                    <div th:if="${param.expired}" class="alert alert-success">
+                        Session expired.
+                    </div>
                     <div th:if="${param.message}" class="alert alert-success">
                         User Successfully Created.
                     </div>
