--- a/src/main/resources/templates/bank-transfer.html
+++ b/src/main/resources/templates/bank-transfer.html
@@ -16,6 +16,9 @@
     <div th:if="${message}" class="alert alert-success">
         Bank Transfer Successfully Done.
     </div>
+    <div th:if="${errorMessage}" class="alert alert-danger">
+        Insufficient balance, please check your account before any banking transfer.
+    </div>
 </div>
 
 
@@ -28,15 +31,15 @@
             <legend class="col-form-label col-sm-2 pt-0">DEBIT/CREDIT</legend>
             <div class="col-sm-10">
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" th:field="*{type}" value="DEBIT" checked required>
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" th:field="*{type}" value="CREDIT" checked required>
                     <label class="form-check-label" for="gridRadios1">
-                        Bank Debit (from Bank to PayMyBuddy)
+                        Bank Credit (from Bank to PayMyBuddy)
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" th:field="*{type}" value="CREDIT" required>
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" th:field="*{type}" value="DEBIT" required>
                     <label class="form-check-label" for="gridRadios2">
-                        Bank Credit (from PayMyBuddy to Bank)
+                        Bank Debit (from PayMyBuddy to Bank)
                     </label>
                 </div>
             </div>
@@ -59,7 +62,7 @@
     <div class="form-group row">
         <label for="iban" class="col-sm-2 col-form-label">IBAN</label>
         <div class="col-sm-10">
-            <input th:field="*{bankAccount.iban}" type="text" class="form-control" id="iban" placeholder="IBAN">
+            <input th:field="*{bankAccount.iban}" type="text" class="form-control" id="iban" placeholder="IBAN" required>
         </div>
     </div>
             </div>
@@ -69,7 +72,7 @@
     <div class="form-group row">
         <label for="bic" class="col-sm-2 col-form-label">BIC</label>
         <div class="col-sm-10">
-            <input th:field="*{bankAccount.bic}" type="text" class="form-control" id="bic" placeholder="BIC">
+            <input th:field="*{bankAccount.bic}" type="text" class="form-control" id="bic" placeholder="BIC"required>
         </div>
     </div>
             </div>
