--- a/src/main/resources/templates/fragments/navbarhome.html
+++ b/src/main/resources/templates/fragments/navbarhome.html
@@ -43,7 +43,7 @@
 <div>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item">Home</a></li>
         </ol>
 
     </nav>
