--- a/src/main/resources/templates/fragments/navbartransfer.html
+++ b/src/main/resources/templates/fragments/navbartransfer.html
@@ -42,7 +42,7 @@
 <div>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="/home">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">Transfer</li>
         </ol>
 
