--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -113,7 +113,7 @@
         </table>
         <div th:if="${transactionPage.totalPages > 0}" class="pagination"
              th:each="pageNumber : ${pageNumbers}">
-            <a th:href="@{/home(size=${transactionPage.size}, page=${pageNumber})}"
+            <a th:href="@{/transfer(size=${transactionPage.size}, page=${pageNumber})}"
                th:text=${pageNumber}
                th:class="${pageNumber==transactionPage.number + 1} ? active"></a>
         </div>
