--- a/src/main/resources/templates/bank-transfer.html
+++ b/src/main/resources/templates/bank-transfer.html
@@ -82,7 +82,7 @@
     <div class="form-group row">
         <label for="bic" class="col-sm-2 col-form-label">Amount</label>
         <div class="col-sm-10">
-            <input th:field="*{amount}" id="amount" class="form-control" name="amount" type="number" min="0" step="5" value="0" required />
+            <input th:field="*{amount}" id="amount" class="form-control" name="amount" type="number" min="0"  value="0" required />
         </div>
     </div>
             </div>
